--- a/php_examples/cours_php_3_functions/css/style.css
+++ b/php_examples/cours_php_3_functions/css/style.css
@@ -23,6 +23,7 @@ header {
 nav {
     height: 100px;
     width: 100%;
+    background-color: #025939;
     /* Je transforme ma nav en flexbox pour aligner correctement les éléments de navigation */
     display: flex;
     justify-content: space-evenly;
@@ -32,19 +33,22 @@ nav {
 
 /* Le contenu principal de mes pages, (sauf le footer et le header), se situe dans les balise <main> */
 main {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     color: #025939;
     font-weight: bold;
+    justify-content: center;
+    align-items: center;
     /* IMPORTANT : pour éviter toute déformation et afin que ma partie central prenne toute la place disponible j'utilise la propriété flex-grow */
     /* https://developer.mozilla.org/fr/docs/Web/CSS/flex-grow */
     flex-grow: 1;
 }
 
 a {
-    /* Ces trois propriétés permettent de ne pas avoir de style sur mes balises <a> */
     text-decoration: inherit;
     font-style: normal;
-    color: white;
+    color: orange;
     font-weight: bold;
     font-size: larger;
 
@@ -54,12 +58,7 @@ a {
 /* Il existe d'autre selectors de ce type, ci-dessous un lien */
 /* https://developer.mozilla.org/fr/docs/Web/CSS/:hover */
 a:hover {
-    color: lightgreen;
-}
-
-p {
-    color: white;
-    font-weight: bold;
+    color: orangered;
 }
 
 footer {
@@ -78,12 +77,6 @@ address {
     justify-content: space-evenly;
 }
 
-/* Cette partie concerne le css qui cible des Class que nous avons mis dans le code */
-
-.current_page {
-    color: lightgreen;
-}
-
 /* Cette partie concerne le css qui cible des ID que nous avons mis dans le code */
 
 #logo {
@@ -91,4 +84,3 @@ address {
     width: 48px;
     margin-left: 20px;
 }
-
